fixing palmweb layout problems with common names and distribution

--- a/themes/palmweb_2/style.css
+++ b/themes/palmweb_2/style.css
@@ -522,6 +522,9 @@ body.sidebars #footer {
 	font-size: 90%;
 }
 
+.common_names_as_common_names, .footnote, p.description{
+	margin-left: 2em;
+}
 
 #wrapper #container .breadcrumb {
   font-size: 0.92em;
